Stackless-Python News
+++++++++++++++++++++

This file documents user visible changes to the Stackless extension of C-Python.
For other changes see Misc/NEWS.

What's New in Stackless 3.X.X?
==============================

*Release date: 20XX-XX-XX*

- https://github.com/stackless-dev/stackless/issues/177
  Fix a crasher in prickelpit.c slp_cannot_execute().
  Stackless versions released after March 2017 can crash, if a program executes
  an unpickled tasklet, that lost its C-state. Now Stackless always raises
  RuntimeError.

- https://github.com/stackless-dev/stackless/issues/152
  C-Python bpo30860 consolidates stateful C globals under a single struct.
  Stackless also moves its stateful C globals to the appropriate structures
  (runtime-state or interpreter-state or thread-state). This change modifies
  some internal APIs and structures.

- https://github.com/stackless-dev/stackless/issues/149
  C-Python bpo-25612 (#1773) moves the exception state information from frame
  object to coroutine (generator/thread) object where it belongs. As a
  consequence Stackless moves the exception state information from thread
  to tasklet. This changes the pickle format of frame, tasklet and generator
  objects compared to previous major versions of Stackless.

- https://github.com/stackless-dev/stackless/issues/166
  Fix C-API functions PyEval_EvalFrameEx() and PyEval_EvalFrame().
  They are now compatible with C-Python.

- https://github.com/stackless-dev/stackless/issues/168
  Make Stackless compatible with old Cython extension modules compiled
  for regular C-Python.

- https://github.com/stackless-dev/stackless/issues/167
  Replace 'printf(...)' calls by PySys_WriteStderr(...). They are used to emit
  an error message, if there is a pending error while entering Stackless
  subsystem.

- https://github.com/stackless-dev/stackless/issues/154
  Fix a minor bug in STACKLESS_PROMOTE_WRAPPER and STACKLESS_PROMOTE_METHOD.
